# sas-server-simulator

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeLists_backup.txt  CMakeLists_distributed.txt  MMS_ADDRESS_DOCUMENTATION.md  README.md  build_models.ps1  ied_manager.c  ied_manager.h  launch_all.bat  list_pcap.c  test_genmodel.ps1
agent/feature/: GI150kV_ANTAM_POMALAA_SAS_Architecture.md  IEC61850_MMS_Complete_DataType_Rules.md  IEC61850_MMS_ReadWrite_Rules.md  SAS_AI_Agent_SystemPrompt.md  implementation_plan.md  log.md
agent/rules/: ct-ttask.md  docs_task.md  implementation_plan.md  reports.md  stVal_rule.md  task.md  write_feature.md
agent/task/: double_bus_scheme.md  xswi_task.md
config/E00_BUSBAR/config/: E00_P746.json
config/E01_TRF1/config/: E01_BCU.json  E01_P142.json  E01_P643.json
config/E02_TRF2/config/: E02_BCU.json  E02_P142.json  E02_P643.json
config/E03_TRF3/config/: E03_BCU.json  E03_P142.json  E03_P643.json
config/E04_COUPLER/config/: E04_BCU.json  E04_P143.json
config/E05_LINE1/config/: E05_BCU.json  E05_P142.json  E05_P543.json
config/E06_LINE2/config/: E06_BCU.json  E06_P142.json  E06_P543.json
ieds/: E01_P142.cid  E01_P643.cid  E02_BCU.cid  E02_P142.cid  E02_P643.cid  E03_BCU.cid  E03_P142.cid  E03_P643.cid  E04_BCU.cid  E04_P143.cid  E05_BCU.cid  E05_P142.cid  E05_P543.cid  E06_BCU.cid  E06_P142.cid  E06_P543.cid
legacy/: fault_engine.c  fault_engine.h  goose_matrix.c  goose_matrix.h  sas_server.c  sas_server_distributed.c
scripts/: build_models.py  fix_goose_subs.py  fix_header_guard.py  fix_relay_configs.py  generate_cid.py  generate_per_ied_cid.py  recreate_json.py
scripts/trash/: E006_BCU.c  E006_BCU.h
src/backup/: E005_BCU.cid  E00_P746.c  E00_P746.cid  E00_P746.h  E01_BCU.c  E01_BCU.cid  E01_BCU.h  E01_P142.c  E01_P142.cid  E01_P142.h  E01_P643.c  E01_P643.cid  E01_P643.h  E02_BCU.c  E02_BCU.cid  E02_BCU.h  E02_P142.c  E02_P142.cid  E02_P142.h  E02_P643.c  E02_P643.cid  E02_P643.h  E03_BCU.c  E03_BCU.cid  E03_BCU.h  E03_P142.c  E03_P142.cid  E03_P142.h  E03_P643.c  E03_P643.cid  E03_P643.h  E04_BCU.c  E04_BCU.cid  E04_BCU.h  E04_P143.c  E04_P143.cid  E04_P143.h  E05_BCU.c  E05_BCU.cid  E05_BCU.h  (+18 more)
src/models/: E00_P746.c  E00_P746.cid  E00_P746.h  E01_BCU.c  E01_BCU.cid  E01_BCU.h  E01_P142.c  E01_P142.cid  E01_P142.h  E01_P643.c  E01_P643.h  E02_BCU.c  E02_BCU.cid  E02_BCU.h  E02_P142.c  E02_P142.cid  E02_P142.h  E02_P643.c  E02_P643.cid  E02_P643.h  E03_BCU.c  E03_BCU.cid  E03_BCU.h  E03_P142.c  E03_P142.cid  E03_P142.h  E03_P643.c  E03_P643.cid  E03_P643.h  E04_BCU.c  E04_BCU.cid  E04_BCU.h  E04_P143.c  E04_P143.cid  E04_P143.h  E05_BCU.c  E05_BCU.cid  E05_BCU.h  E05_P142.c  E05_P142.cid  (+13 more)
src/relays/: ied_c264_bcu.c  ied_p142_overcurrent.c  ied_p543_distance.c  ied_p643_diff.c  ied_p746_busbar.c
src/shared/: goose_handler.c  goose_handler.h  ied_config.c  ied_config.h  ied_server_base.c  ied_server_base.h
